--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Library</title>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <button id="add-book">New Book</button>
+    <h1 id="book-list"></h1>
     <script src="script.js"></script>
   </body>
 </html>
