--- a/index.html
+++ b/index.html
@@ -4,11 +4,48 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <script src="script.js" defer></script>
     <title>Library</title>
   </head>
   <body>
-    <button id="add-book">New Book</button>
-    <h1 id="book-list"></h1>
-    <script src="script.js"></script>
+    <div class="main-container">
+      <div class="form-container">
+        <form action="placeholder_for_testing.php" method="post">
+          <label for="title">Book Title</label>
+          <input type="text" name="title" id="title" required />
+          <label for="author">Book Author</label>
+          <input type="text" name="author" id="author" required />
+          <label for="number_of_pages">Number of pages</label>
+          <input
+            type="number"
+            name="number_of_pages"
+            id="number_of_pages"
+            required
+          />
+          <select name="status" id="status">
+            <option value="read">Read</option>
+            <option value="not_read">Not Read</option>
+          </select>
+          <button type="submit">Add Book</button>
+        </form>
+        <button id="add-book">New Book</button>
+      </div>
+      <div class="book-details-container">
+        <div class="detail-one">
+          <p>BOOKS READ:</p>
+          <p>BOOKS UNREAD:</p>
+          <p>TOTAL BOOKS:</p>
+          <button>DELETE ALL</button>
+        </div>
+        <div class="detail-two">
+          <p>TITLE</p>
+          <p>AUTHOR</p>
+          <p>PAGES</p>
+          <p>STATUS</p>
+          <p>REMOVAL</p>
+        </div>
+        <h1 id="book-list"></h1>
+      </div>
+    </div>
   </body>
 </html>
