made the number of read, unread and total number of books to appear in the dom when a book is added

--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
       </div>
       <div class="book-details-container">
         <div class="detail-one">
-          <p>BOOKS READ:</p>
-          <p>BOOKS UNREAD:</p>
-          <p>TOTAL BOOKS:</p>
-          <button>DELETE ALL</button>
+          <p id="books-read">BOOKS READ:</p>
+          <p id="books-unread">BOOKS UNREAD:</p>
+          <p id="total-books">TOTAL BOOKS:</p>
+          <button id="delete-all">DELETE ALL</button>
         </div>
         <div class="detail-two">
-          <p>TITLE</p>
-          <p>AUTHOR</p>
-          <p>PAGES</p>
-          <p>STATUS</p>
-          <p>REMOVAL</p>
+          <p id="book-title">TITLE</p>
+          <p id="book-author">AUTHOR</p>
+          <p id="book-pages">PAGES</p>
+          <p id="book-status">STATUS</p>
+          <p id="removal">REMOVAL</p>
         </div>
         <h1 id="book-list"></h1>
       </div>
