Added a delete button to each instance of book being created

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <p id="book-author">AUTHOR</p>
           <p id="book-pages">PAGES</p>
           <p id="book-status">STATUS</p>
-          <p id="removal">REMOVAL</p>
+          <!-- <button id="removal">REMOVAL</button> -->
         </div>
         <h1 id="book-list"></h1>
       </div>
