--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
   <body>
     <div class="main-container">
       <div class="form-container">
+        <div class="logo">
+          <img src="book.png" alt="image-of-book" height="50px" />
+          <p>LIBRARY</p>
+        </div>
         <form
           action="placeholder_for_testing.php"
           method="post"
           class="new-book-form"
           id="new-book-form"
         >
-          <label for="title">Book Title</label>
           <input
             type="text"
             name="title"
@@ -25,30 +28,51 @@
             placeholder="Book Title"
             required
           />
-          <label for="author">Book Author</label>
-          <input type="text" name="author" id="author" required />
-          <label for="pages">Number of pages</label>
-          <input type="number" name="pages" id="pages" required />
+          <input
+            type="text"
+            name="author"
+            id="author"
+            placeholder="Book Author"
+            required
+          />
+          <input
+            type="number"
+            name="pages"
+            id="pages"
+            placeholder="Number of Pages"
+            required
+          />
           <select name="status" id="status">
             <option value="read">Read</option>
             <option value="not-read">Not Read</option>
           </select>
-          <button type="submit" id="add-book">Add Book</button>
+          <button type="submit" id="add-book">ADD BOOK</button>
         </form>
       </div>
       <div class="book-details-container">
         <div class="detail-one">
-          <p id="books-read">BOOKS READ:</p>
-          <p id="books-unread">BOOKS UNREAD:</p>
-          <p id="total-books">TOTAL BOOKS:</p>
+          <p id="books-read">BOOKS READ: 0</p>
+          <p id="books-unread">BOOKS UNREAD: 0</p>
+          <p id="total-books">TOTAL BOOKS: 0</p>
           <button id="delete-all">DELETE ALL</button>
         </div>
         <div class="detail-two">
-          <p id="book-title">TITLE</p>
-          <p id="book-author">AUTHOR</p>
-          <p id="book-pages">PAGES</p>
-          <p id="book-status">STATUS</p>
-          <button id="removal">REMOVAL</button>
+          <div class="detail-two-elements">
+            <p id="book-title">TITLE</p>
+            <p id="book-author">AUTHOR</p>
+            <p id="book-pages">PAGES</p>
+            <p id="book-status">STATUS</p>
+            <p id="removal">REMOVAL</p>
+          </div>
+        </div>
+        <div class="detail-three">
+          <div class="detail-three-elements">
+            <p id="book-title-data"></p>
+            <p id="book-author-data"></p>
+            <p id="book-pages-data"></p>
+            <p id="book-status-data"></p>
+            <p id="removal-data"></p>
+          </div>
           <h1 id="book-list"></h1>
         </div>
       </div>
