Debug some few issues with update the book data on the dom

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           />
           <select name="status" id="status">
             <option value="read">Read</option>
-            <option value="not-read">Not Read</option>
+            <option value="unread">Not Read</option>
           </select>
           <button type="submit" id="add-book">ADD BOOK</button>
         </form>
