added some more validation to the sellect element

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             max="1500"
           />
           <select name="status" id="status">
-            <option value="" selected disabled>Select Status</option>
+            <option value="" selected>Select Status</option>
             <option value="read">Read</option>
             <option value="unread">Not Read</option>
           </select>
