changing the headings of book titles

--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
             <option value="read">Read</option>
             <option value="unread">Not Read</option>
           </select>
-          <button type="submit" id="add-book">ADD BOOK</button>
+          <button type="submit" id="add-book" class="add-book-button">
+            ADD BOOK
+          </button>
         </form>
       </div>
       <div class="book-details-container">
@@ -70,11 +72,11 @@
         </div>
         <div class="detail-three">
           <div class="detail-three-elements">
-            <p id="book-title-data"></p>
-            <p id="book-author-data"></p>
-            <p id="book-pages-data"></p>
-            <p id="book-status-data"></p>
-            <p id="removal-data"></p>
+            <p id="book-title-data" class="detail-three"></p>
+            <p id="book-author-data" class="detail-three"></p>
+            <p id="book-pages-data" class="detail-three"></p>
+            <p id="book-status-data" class="detail-three"></p>
+            <p id="removal-data" class="detail-three"></p>
           </div>
           <h1 id="book-list"></h1>
         </div>
