adding some improvement to the app

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
           />
           <select name="status" id="status">
             <option value="" selected>Select Status</option>
-            <option value="read">Read</option>
-            <option value="unread">Not Read</option>
+            <option value="Read">Read</option>
+            <option value="Unread">Not Read</option>
           </select>
           <button type="submit" id="add-book" class="add-book-button">
             ADD BOOK
@@ -70,16 +70,7 @@
             <p id="removal">REMOVAL</p>
           </div>
         </div>
-        <div class="detail-three">
-          <div class="detail-three-elements">
-            <p id="book-title-data" class="detail-three"></p>
-            <p id="book-author-data" class="detail-three"></p>
-            <p id="book-pages-data" class="detail-three"></p>
-            <p id="book-status-data" class="detail-three"></p>
-            <p id="removal-data" class="detail-three"></p>
-          </div>
-          <h1 id="book-list"></h1>
-        </div>
+        <div id="detail-three"></div>
       </div>
     </div>
   </body>
