made it responsive to all devices at least

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
             id="pages"
             placeholder="Number of Pages"
             required
+            min="15"
+            max="2000"
           />
           <select name="status" id="status">
             <option value="" selected>Select Status</option>
@@ -60,15 +62,6 @@
           <p id="books-unread">BOOKS UNREAD: 0</p>
           <p id="total-books">TOTAL BOOKS: 0</p>
           <button id="delete-all">DELETE ALL</button>
-        </div>
-        <div class="detail-two">
-          <div class="detail-two-elements">
-            <p id="book-title">TITLE</p>
-            <p id="book-author">AUTHOR</p>
-            <p id="book-pages">PAGES</p>
-            <p id="book-status">STATUS</p>
-            <p id="removal">REMOVAL</p>
-          </div>
         </div>
         <div id="detail-three"></div>
       </div>
