added some more validations to the form

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
             id="title"
             placeholder="Book Title"
             required
-            maxlength="75"
+            minlength="20"
+            maxlength="30"
           />
           <input
             type="text"
@@ -35,7 +36,8 @@
             id="author"
             placeholder="Book Author"
             required
-            maxlength="75"
+            maxlength="30"
+            minlength="20"
           />
           <input
             type="number"
