Removed the index.html file from the src folder to the root folder

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="book.png" type="image/x-icon" />
+    <link rel="icon" href="./assets/book.png" type="image/x-icon" />
     <link rel="stylesheet" href="./css-files/style.css" />
     <script src="script.js" defer></script>
     <title>Library</title>
@@ -12,7 +12,7 @@
     <div class="main-container">
       <div class="form-container">
         <div class="logo">
-          <img src="book.png" alt="image-of-book" height="50px" />
+          <img src="./assets/book.png" alt="image-of-book" height="50px" />
           <p>LIBRARY</p>
         </div>
         <form
