Changed the file path of the CSS Since I removed the index.html from the src

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="./assets/book.png" type="image/x-icon" />
-    <link rel="stylesheet" href="./css-files/style.css" />
+    <link rel="stylesheet" href="./src/css-files/style.css" />
     <script src="script.js" defer></script>
     <title>Library</title>
   </head>
@@ -17,7 +17,6 @@
         </div>
         <form
           action="placeholder_for_testing.php"
-          method="post"
           class="new-book-form"
           id="new-book-form"
         >
