--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="./assets/book.png" type="image/x-icon" />
     <link rel="stylesheet" href="./src/css-files/style.css" />
-    <script src="script.js" defer></script>
+    <script src="/src/js-files/script.js" defer></script>
     <title>Library</title>
   </head>
   <body>
@@ -18,6 +18,7 @@
         <form
           action="placeholder_for_testing.php"
           class="new-book-form"
+          method="post"
           id="new-book-form"
         >
           <input
