--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href="src/assets/book.png" type="image/x-icon" />
     <link rel="stylesheet" href="./src/css-files/style.css" />
-    <script src="/src/js-files/script.js" defer></script>
+    <script src="./src/js-files/script.js" defer></script>
     <title>Library</title>
   </head>
   <body>
